# System-Monitor-GUI

./: CMakeLists.txt  README.md
src/: main.cpp
src/monitor/: cpu.cpp  cpu.hpp  memory.cpp  memory.hpp  network.cpp  network.hpp
src/ui/: dashboard.cpp  dashboard.hpp  theme.hpp
